Fix T66940, T67005, T60651: append workspace from old startup file fails

Don't try to use old screens as workspaces, just leave them out of the menu.

Differential Revision: https://developer.blender.org/D5270